--- a/Prueba/web/static/css/globalcolor.css
+++ b/Prueba/web/static/css/globalcolor.css
@@ -25,11 +25,11 @@
 }
 
 .colored-toast.swal2-icon-success {
-    background-color: #a5dc86 !important;
+    background-color: #000000 !important;
   }
   
   .colored-toast.swal2-icon-error {
-    background-color: #f27474 !important;
+    background-color: #dd3131 !important;
   }
   
   .colored-toast.swal2-icon-warning {
